# Claude-Code-Usage-Analytics-Platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  Technical Task description.docx  pyproject.toml
.codex/skills/telemetry-analysis/: SKILL.md
.codex/skills/telemetry-analysis/agents/: openai.yaml
app/: Home.py
app/pages/: 1_Product_Overview.py  2_Engineering_Usage.py  3_Reliability_Operations.py  4_Cost_Optimization.py
docs/: architecture.md  llm_usage.md
sql/: schema.sql
src/telemetry_analytics/: __init__.py  cli.py  config.py  db.py
src/telemetry_analytics/ingestion/: __init__.py  employees.py  load.py  parser.py
src/telemetry_analytics/metrics/: __init__.py  duckdb_metrics.py  queries.py
src/telemetry_analytics/normalize/: __init__.py  models.py  records.py  telemetry.py
src/telemetry_analytics/storage/: __init__.py  duckdb_store.py
tests/: test_duckdb_metrics.py  test_duckdb_storage.py  test_ingestion_normalization.py  test_normalized_model_contract.py  test_parser_contract.py  test_validation.py
tests/fixtures/: employees.csv  malformed_telemetry_logs.jsonl  telemetry_logs.jsonl
