[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-telemetry-analytics"
version = "0.1.0"
description = "Streamlit and DuckDB analytics app for Claude Code telemetry logs"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "pandas>=2.2",
  "plotly>=5.22",
  "pyarrow>=16.0",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
telemetry-analytics = "telemetry_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
